// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageHeader is rendered 1`] = `
<header
  aria-label="aria-label"
  class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader"
  data-test-subj="test subject string"
>
  <div
    class="emotion-euiPageHeaderContent"
  >
    <div
      class="css-ljpjbj-flex-center"
    >
      Anything
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems bottom is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems center is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems stretch is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems top is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props bottomBorder is rendered as extended 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-border"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props bottomBorder is rendered as true 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props page content props are passed down is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent-border"
  >
    <nav
      aria-label="aria-label"
      class="euiBreadcrumbs testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <ol
        class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
      >
        <li
          class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
        >
          <a
            class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
            data-test-subj="breadcrumbsAnimals"
            href="#"
            rel="noreferrer"
          >
            Animals
          </a>
        </li>
        <li
          class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncatedLast-euiTextColor-default"
          >
            Edit
          </span>
        </li>
      </ol>
    </nav>
    <div
      class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          aria-label="aria-label"
          class="euiTitle testClass1 testClass2 emotion-euiTitle-l"
          data-test-subj="test subject string"
        >
          <span
            class="testClass1 testClass2 emotion-euiPageHeaderContent__titleIcon"
            data-euiicon-type="logoKibana"
            data-test-subj="test subject string"
          >
            aria-label
          </span>
          Page title
        </h1>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <div
          class="euiText emotion-euiText-constrainedWidth-m-euiTextColor-inherit"
        >
          <p>
            Description
          </p>
        </div>
        <div
          class="euiPageHeaderContent__bottom"
        >
          <div
            class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
          />
          <p>
            Anything
          </p>
          <div
            class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
          />
          <div
            aria-label="aria-label"
            class="euiTabs euiTabs--large testClass1 testClass2"
            data-test-subj="test subject string"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="euiTab euiTab-isSelected"
              role="tab"
              type="button"
            >
              <span
                class="euiTab__content"
              >
                Tab 1
              </span>
            </button>
            <button
              aria-selected="false"
              class="euiTab"
              role="tab"
              type="button"
            >
              <span
                class="euiTab__content"
              >
                Tab 2
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          aria-label="aria-label"
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--responsive euiFlexGroup--wrap testClass1 testClass2"
          data-test-subj="test subject string"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as false 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as reverse 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as custom 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
    style="max-width:100px"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as true 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
    style="max-width:1200px"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;
